sumo/tests/dfrouter/errors/options_parsing/quad_minus/options.dfrouter
----net-file=net.net.xml --detector-files=input_detectors.det.xml --detectors-poi-output detectors.poi.xml
